k8s/docs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docusaurus
  labels:
    app: docusaurus
spec:
  selector:
    app: docusaurus
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
