k8s/docs/services.yml
apiVersion: v1
kind: Service
metadata:
  name: docusaurus
  labels:
    app: docusaurus
spec:
  selector:
    app: docusaurus
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: doxygen
  labels:
    app: doxygen
spec:
  selector:
    app: doxygen
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: rfc
  labels:
    app: rfc
spec:
  selector:
    app: rfc
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
