k8s/docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: documentation.molaryy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docusaurus
                port:
                  number: 3000
    - host: doxygen.molaryy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doxygen
                port:
                  number: 8080
    - host: rfc.molaryy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rfc
                port:
                  number: 8081
